--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+.hero{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:500px;
+	padding:20px;
+	background-color:#43B7BA;
+	overflow:hidden;
+}
+.hero-image{
+	width:200px;
+	height:200px;
+	object-fit:cover;
+}
+.hero-content{
+	text-align:center;
+	color:white;
+}
+.hero-content h1{
+	font-size:48px;
+	margin-bottom:20px;
+}
+.hero-content p{
+	font-size:18px;
+	margin-bottom:30px;
+}
+
